# coding-test-ready

./: README.md  pyproject.toml
DeepLearning.py/: bert.py  cnn.py  dnn.py
Structured/: check_columns.py  count.py  decision_tree.py  dimension_reduction_Autoencoder.py  dimension_reduction_LDA.py  dimension_reduction_PCA.py  dimension_reduction_tsne.py  k_nearst_neighbors.py  linear_regression.py  logistic_regression.py  outlier_DBSCAN.py  outlier_IQR.py  random_forest.py  scaling_minmax.py  scaling_zscore.py  svm.py  unsupervised_gmm.py  unsupervised_kmeans_clustering.py
Unstructured/: onehot-encoding.py  word2vec.py
